--- a/PortsApi/appsettings.json
+++ b/PortsApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TESTConnectionString": "Server=PORTS;Database=TEST;User Id=sa;Password=A@a123456;TrustServerCertificate=True"
+    "TESTConnectionString": 
   },
   "Logging": {
     "LogLevel": {
@@ -19,6 +19,6 @@
     }
   },
   "AppSettings": {
-    "AttachmentsFolderPath": "C:\\Users\\michael_s\\source\\repos\\PortsApi\\PortsApi\\attachments\\"
+    "AttachmentsFolderPath": 
   }
 }
